<?xml version="1.0"?>
<package format="2">
  <name>grid_mapping</name>
  <version>0.0.0</version>
  <description>
    Occupancy grid mapping package for ROS Noetic. Provides tools and scripts
    to generate grid maps from ROS bag files.
  </description>

  <!-- Maintainer: replace with your real name & email -->
  <maintainer email="wangzhaoze@outlook.com">Your Name</maintainer>

  <!-- License: choose one (MIT, BSD, GPLv3, etc.) -->
  <license>MIT</license>

  <!-- Build tools -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- The export tag is required -->
  <export>
  </export>
</package>
